# Actix-Web-API

./: Cargo.toml  Config.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
database/: data.sql  schema.sql
src/: config.rs  db.rs  errors.rs  main.rs  models.rs  routes.rs  token.rs
