[profile.release]
lto = true
strip = true
codegen-units = 1

[package]
name = "backend"
version = "1.0.0"
edition = "2021"
authors = ["Landon R"]

[dependencies]
rand = "0.8.5"
actix-web = "4"
regex = "1.6.0"
toml = "0.5.10"
sha256 = "1.0.3"
chrono = "0.4.22"
config = "0.13.2"
dotenv = "0.15.0"
rust-argon2 = "1.0"
lazy_static = "1.4.0"
serde_json = "1.0.85"
jsonwebtoken = "8.1.1"
password-hash = "0.4.2"
derive_more = "0.99.17"
tokio-pg-mapper = "0.2.0"
actix-web-httpauth = "0.8.0"
tokio-pg-mapper-derive = "0.2.0"
tokio = { version = "1.22.0", features = ["rt"] }
rand_core = { version = "0.6.0", features = ["std"] }
serde = { version = "1.0.144", features = ["derive"] }
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
tokio-postgres = { version = "0.7.7", features = ["with-uuid-1"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "serde"] }
postgres-types = {version = "0.2.4", features = ["derive", "with-serde_json-1"]}